fix line break in menu bar

--- a/menupages.css
+++ b/menupages.css
@@ -3,26 +3,20 @@
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
 }
-* { 
-margin: 0; 
-padding: 0; 
-} 
 #header_container { 
 	background:#eee; 
 	height:125px; left:0; 
 	position:fixed; 
-	width:100%; top:0; 
+	width:100%; 
+	top:0; 
 }
-
 #header_home { 
-	line-height:60px; 
-	margin:0 auto; 
-	width:940px; 
-	text-align:left; 
+	vertical-align: middle;
+	text-align:center; 
+	font-family: 'entypo', sans-serif;
 }
 #header_menu {
-	line-height:60px; 
-	margin:0 auto; 
-	width:940px; 
-	text-align:right; 	
+	vertical-align: middle;
+	text-align:center; 	
+	font-family: 'entypo', sans-serif;
 }
